@@ -2,6 +2,7 @@
 
 = 2.1.4 =
 * Fixed: Actually fixed abandoned Checkout orders not being deleted this time.
+* Fixed: Payments towards a failed renewal order are now possible.
 
 = 2.1.3 =
 * Fixed: We were still using calls to `get_posts` a few places, which was incompatible with WooCommerce HPOS. This fixes gateway changes, in-app description updates, and in-app subscription cancellation for installations using HPOS.
